# icub-teleoperation

./: .gitignore  CMakeLists.txt  READ.md  README.md
QPTeleoperation/: CMakeLists.txt
QPTeleoperation/app/conf/: icub.urdf  retargetingIcub.ini  retargetingLIP.ini  retargetingQP.ini
QPTeleoperation/app/scripts/: README.md  icub-teleoperation.xml  teleop-dumper.xml
QPTeleoperation/doc/: limbRatio.txt
QPTeleoperation/src/modules/: CMakeLists.txt
QPTeleoperation/src/modules/LIP_retargeting/: LIPModule.cpp  LIPModule.h  LIPThread.cpp  LIPThread.h  main.cpp
QPTeleoperation/src/modules/icub_retargeting/: CMakeLists.txt  main.cpp  retargetingModule.cpp  retargetingModule.h  retargetingThread.cpp  retargetingThread.h
QPTeleoperation/src/modules/retargetingQP/: main.cpp  retargetingModule.cpp  retargetingModule.h  retargetingThread.cpp  retargetingThread.h
TorqueBalancingTeleoperation/: CMakeLists.txt  README.md
TorqueBalancingTeleoperation/app/conf/: homePoseRetarget.ini  retargetingTorqueBalancing.ini
TorqueBalancingTeleoperation/app/scripts/: teleop-dumper.xml
TorqueBalancingTeleoperation/src/: CMakeLists.txt
TorqueBalancingTeleoperation/src/controllers/torqueBalancing/: initTorqueBalancing.m
TorqueBalancingTeleoperation/src/controllers/torqueBalancing/slprj/_jitprj/: s3RdDKX6SrwF7mQqUSLhzbE.l  s3RdDKX6SrwF7mQqUSLhzbE.mat  sDE4W9Bw8FdkjcSOC0nzVV.l  sDE4W9Bw8FdkjcSOC0nzVV.mat  sE0zpDiKV9fHSxskrZOvnWF.l  sE0zpDiKV9fHSxskrZOvnWF.mat  sFagarGzqGf5dZ8uM5OQoNE.mat  sI5PSLVoCPPzJGZDdvklkj.mat  sIplzrk2RjntohlZk664XKF.l  sIplzrk2RjntohlZk664XKF.mat  sJNgpoQOfvtAVPYG4AuufgG.l  sKNelNis93VWThE7s4y5LTH.l  sKNelNis93VWThE7s4y5LTH.mat  sKfFfaYXuuye2VnFhgflE3C.mat  sLJkrDYDZ1PMZ5JdgkGuUd.l  sLJkrDYDZ1PMZ5JdgkGuUd.mat  sOgkQ4wvYlbboFGKkUzqbc.l  (+9 more)
TorqueBalancingTeleoperation/src/modules/: CMakeLists.txt
TorqueBalancingTeleoperation/src/modules/comRetargeting/: CMakeLists.txt  comRetargetingModule.cpp  comRetargetingModule.h  comRetargetingThread.cpp  comRetargetingThread.h  main.cpp
TorqueBalancingTeleoperation/src/modules/jointRetargeting/: CMakeLists.txt  jointRetargetingModule.cpp  jointRetargetingModule.h  jointRetargetingThread.cpp
TorqueBalancingTeleoperation/src/modules/retargetingTorqueBalancing/: README.md  retargetThread.cpp
TorqueBalancingTeleoperation/src/utilities/icub_back/: icub_back16.sdf  icub_back9.sdf
TorqueBalancingTeleoperation/src/utilities/icub_bottle/: icub_bottle1.sdf  icub_bottle3.sdf  model.config
TorqueBalancingTeleoperation/src/utilities/icub_openarms/: model.config
TorqueBalancingTeleoperation/src/utilities/icub_pipe/: icub_pipe18.sdf  icub_pipe19.sdf  model.config
TorqueBalancingTeleoperation/src/utilities/icub_retarget/: icub_retarget.sdf
TorqueBalancingTeleoperation/src/utilities/icub_wheel/: icub_wheel20.sdf  icub_wheel7.sdf
TorqueBalancingTeleoperation/src/utilities/worlds/: icub_bottle.world  icub_openarms.world
app/: CMakeLists.txt
app/conf/: MpcSolver.ini  README.md  comMapping.ini  comRetargeting.ini  homePoseRetarget.ini  jointMapping.ini  jointRetargeting.ini  retarget.ini  retargeting.ini  retargetingIcub.ini
app/scripts/: icub-teleoperation.xml  icub-teleoperation.xml.template
doc/: README.md  homePoseNancy.ini  limbRatio.txt
qpOASES/: CMakeLists.txt
retargetdata/: data-dumper.xml
src/: CMakeLists.txt
src/controllers/torqueBalancing/: initTorqueBalancing.m  torqueBalancingR2015bXsens.mdl
src/controllers/torqueBalancing/slprj/_jitprj/: jitEngineAccessInfo.mat  s25rcBKq4FUARp9AxPBs6QD.l  s25rcBKq4FUARp9AxPBs6QD.mat  s8YZmNTWp3mfnnn5olCwUN.l  s8YZmNTWp3mfnnn5olCwUN.mat  sE0kOD9PAKwYHqcfeMfKSt.l  sE0kOD9PAKwYHqcfeMfKSt.mat  sFagarGzqGf5dZ8uM5OQoNE.l  sI5PSLVoCPPzJGZDdvklkj.l  sJNgpoQOfvtAVPYG4AuufgG.mat  sKfFfaYXuuye2VnFhgflE3C.l  sLTb71G3TvjSUN9ElF88STD.l  sLTb71G3TvjSUN9ElF88STD.mat  sOgkQ4wvYlbboFGKkUzqbc.mat  sRDi3DKxwYxMWPL7RDFpolF.l  sZmZoSlv2bxC9KpoCfr7f3D.mat  sbovfgFk7JZB0Xh3WaxBxxF.mat  smvr5pL5bDGNkxVMNwPODuG.mat  swu0xSOpVnAMAKUUmy5nHHF.l  swu0xSOpVnAMAKUUmy5nHHF.mat  syNPqjOGGpKXhH7NuV7gnCF.mat
src/modules/: CMakeLists.txt
src/modules/LIP_corrector/: CMakeLists.txt  LIPvelThread.cpp  LIPvelThread.h  main.cpp
src/modules/LIP_retargeting/: CMakeLists.txt  LIPThread.cpp  LIPThread.h
src/modules/comMapping/: CMakeLists.txt  TODO.txt  comMapping.cpp  comMappingModule.cpp  comMappingModule.h  comMappingThread.cpp  comMappingThread.h  main.cpp  robotStatus.cpp  robotStatus.h  simpleLeggedOdometry.cpp  simpleLeggedOdometry.h  wholeBodyDynamics_IDLServer.h
src/modules/icub_retargeting/: CMakeLists.txt  retargetingModule.cpp  retargetingModule.h  retargetingThread.cpp  retargetingThread.h
src/modules/jointMapping/: CMakeLists.txt  README.md  info.txt  jointMappingModule.cpp  jointMappingModule.h  jointMappingThread.cpp  jointMappingThread.h  main.cpp
src/modules/jointRetargeting/: jointRetargetingModule.cpp  jointRetargetingModule.h  jointRetargetingThread.cpp  jointRetargetingThread.h  main.cpp
src/modules/jointsMapping/: CMakeLists.txt  info.txt  jointMapping.cpp
src/modules/retarget/: CMakeLists.txt  main.cpp  retargetModule.cpp  retargetModule.h  retargetThread.cpp  retargetThread.h  wholeBodyDynamics_IDLServer.cpp
src/modules/retargeting/: CMakeLists.txt  main.cpp  retargetModule.cpp  retargetModule.h  retargetThread.cpp  retargetThread.h  retargetingModule.cpp  retargetingThread.cpp  retargetingThread.h
src/utilities/icub_back/: icub_back10.sdf  icub_liftbox.sdf  icub_liftbox1.sdf  icub_liftbox2.sdf  model.config
src/utilities/icub_bottle/: icub_bottle2.sdf  icub_bottle4.sdf  icub_bottle5.sdf  icub_bottle6.sdf
src/utilities/icub_pipe/: icub_pipe11.sdf  icub_pipe12.sdf  icub_pipe13.sdf
src/utilities/icub_retarget/: model.config
src/utilities/icub_wheel/: icub_wheel17.sdf  icub_wheel8.sdf  model.config
src/utilities/worlds/: icub_pipe.world  icub_retarget.world  icub_wheel.world
(+80 files in other folders)
